--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 </head>
-<body background="image/main//khung-vien-trang-tri-15507.gif" style="background-repeat: no-repeat; background-attachment: fixed; background-size: 100% 100%;">
+<body>
     <h1 style="color:blue" align="center"> MỘT SỐ HÌNH PHẲNG TRONG THỰC TIỄN </h1>
     <table align="center" style="background-color:rgb(183, 253, 255); width:60%; border-spacing: 10px;">
         <tr>
